@@ -1,3 +1,10 @@
+2007-07-06  Kaz Kojima  <kkojima@rr.iij4u.or.jp>
+
+	* sysdeps/sh/bsd-setjmp.S (setjmp): Use correct argument registers.
+	* sysdeps/sh/bsd-_setjmp.S (_setjmp): Likewise.
+	* sysdeps/unix/sysv/linux/sh/clone.S (__clone): Do correct sanity
+	check for the first argument.
+
 2007-07-12  Jakub Jelinek  <jakub@redhat.com>
 
 	[BZ #4775]
